# lab1var4.4

./: CMakeLists.txt  Equation.cpp  Equation.h  ListPoints.cpp  ListPoints.h  appPoint.cpp  appPoint.h  coefficient.cpp  coefficient.h  gasTask.cpp  gasTask.h  main.cpp  mytypes.h
tests/: ans4.5.txt  ansvar3.5.txt  ansvar3.8.txt  ansvar4.txt  var3.5.txt  var3.8.txt  var4.5.txt  var4.txt
tests/Debug/: zadacha1var4_4
tests/Release/: zadacha1var4_4
